## configure.ac

AC_PREREQ([2.69])
AC_INIT([uuenc], [2.0.1], [klmanion@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_LANG_C

AC_HEADER_STDC
AC_HEADER_ASSERT
AC_HEADER_STDBOOL

AC_FUNC_MALLOC

AC_CONFIG_FILES([
 Makefile
 src/Makefile
])

AC_OUTPUT

